--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "class Driver:\n",
-    "    def __init__"
+    "    def __init__(self, fir)"
    ]
   },
   {
