Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,8 @@
    "outputs": [],
    "source": [
     "class Driver:\n",
-    "    def __init__(self, fir)"
+    "    def __init__(self, first, last, occupation):\n",
+    "        "
    ]
   },
   {
