--- a/index.ipynb
+++ b/index.ipynb
@@ -52,6 +52,7 @@
    "source": [
     "class Driver:\n",
     "    def __init__(self, first, last, occupation):\n",
+    "        self.first = none\n",
     "        "
    ]
   },
