--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,8 @@
     "class Driver:\n",
     "    def __init__(self, first, last, occupation):\n",
     "        self.first = none\n",
-    "        "
+    "        self.last = none\n",
+    "        occupation ="
    ]
   },
   {
