Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,17 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Driver:\n",
     "    def __init__(self, first, last, occupation):\n",
     "        self.first = none\n",
     "        self.last = none\n",
-    "        occupation ="
+    "        occupation = \"driver\""
    ]
   },
   {
@@ -65,6 +63,13 @@
     "\n",
     "<img src=\"images/dale.gif\" width=\"500\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
