--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dale = Driver(\"Dale\" )"
+    "dale = Driver(\"Dale\", Earnhardt)"
    ]
   },
   {
