Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "    def __init__(self, first, last, occupation):\n",
     "        self.first = none\n",
     "        self.last = none\n",
-    "        occupation = \"driver\""
+    "        occupation = occupation"
    ]
   },
   {
