Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,8 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dale = Driver(\"Dale\", \"Earnhardt\")"
+    "dale_e = Driver(\"Dale\", \"Earnhardt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
