Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Driver:\n",
+    "class Driver():\n",
     "    def __init__(self, first, last, occupation=\"driver\"):\n",
     "        self.first = first\n",
     "        self.last = last\n",
