Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,6 +75,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(dale)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "scrolled": true
