--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "class Passenger():\n",
-    "    def __init__(self, firs)"
+    "    def __init__(self, first, last, email, )"
    ]
   },
   {
