Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,9 @@
    "source": [
     "class Passenger():\n",
     "    def __init__(self, first, last, email, rides_taken=0):\n",
-    "        self.first = first"
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email = em"
    ]
   },
   {
