Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,8 @@
     "    def __init__(self, first, last, email, rides_taken=0):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.email = em"
+    "        self.email = email\n",
+    "        self.rides_taken = rids"
    ]
   },
   {
