Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,10 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Passenger():\n",
@@ -109,7 +107,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        self.email = email\n",
-    "        self.rides_taken = rids"
+    "        self.rides_taken = rides_taken\n"
    ]
   },
   {
@@ -127,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "jerry = None # initialize Mr. Seinfeld here\n",
+    "jerry = P # initialize Mr. Seinfeld here\n",
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
