Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,13 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jerry\n",
+      "Seinfeld\n",
+      "jerry.seinfeldWmailinator.com\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "jerry = Passenger(\"Jerry\", \"Seinfeld\", 'jerry.seinfeldWmai') # initialize Mr. Seinfeld here\n",
+    "jerry = Passenger(\"Jerry\", \"Seinfeld\", 'jerry.seinfeldWmailinator.com') # initialize Mr. Seinfeld here\n",
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
